[package]
name = "hangar"
version = "0.0.4"
authors = ["Karuna Murti <karuna.murti@gmail.com>"]
description = "Unstable, use at your own risk. Rust web framework, using [Rocket](https://rocket.rs), [Diesel](https://diesel.rs), and [stdweb](https://github.com/koute/stdweb)"
readme = "README.md"
keywords = ["rocket", "diesel", "web", "framework"]
categories = ["development-tools", "web-programming", "web-programming::http-server", "web-programming::http-client"]
license = "MIT"
homepage = "https://hangar-project.org/"
repository = "https://github.com/karuna/hangar/"

[dependencies]
clap = "2.30"
cargo-shim = "0.1.5"
tera = "0.11"
lazy_static = "1.0"
